<resources>

    <integer name="com_vk_sdk_AppId">6173448</integer>

    <string name="app_name">Marvel Heroes</string>
    <string name="title_activity_menu">Marvel Heroes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">Тестовое приложение по комиксам.</string>
    <string name="title_activity_tab_hero_info">TabHeroInfoActivity</string>
    <string name="version_number">Номер версии: %1$s</string>
    <string name="version_code">Номер сборки: %1$d</string>
    <string name="comics">COMICS</string>
    <string name="stories">STORIES</string>
    <string name="events">EVENTS</string>
    <string name="series">SERIES</string>
    <string name="error_loading_data">Не удалось загрузить данные с сервера!</string>
    <string name="unknown_hero">Unknown hero</string>
    <string name="unknown_comics">Unknown comics</string>
    <string name="unknown_story">Unknown story</string>
    <string name="unknown_event">Unknown event</string>
    <string name="unknown_series">Unknown series</string>
    <string name="unknown">Unknown</string>
    <string name="no_description">No description</string>
    <string name="empty_characters">На данный момент список персонажей недоступен</string>
    <string name="empty_comics">У данного персонажа нет комиксов</string>
    <string name="empty_events">Данный персонаж не участвовал в событиях</string>
    <string name="empty_series">У данного персонажа нет серий</string>
    <string name="empty_stories">У данного персонажа нет историй</string>
    <string name="list_characters">Список персонажей</string>
    <string name="about">О приложении</string>
    <string name="list_my_characters">Мои персонажи</string>
    <string name="edit_my_character">Редактировать</string>
    <string name="delete_my_character">Удалить</string>
    <string name="hint_name">Человек молекула</string>
    <string name="hint_superpower">Может уменьшиться до размеров молекулы</string>
    <string name="add_MC">Добавить персонажа</string>
    <string name="validate_data_fail">Все поля должны быть заполнены!</string>
    <string name="my_character_added">Новый персонаж добавлен!</string>
    <string name="my_character_add_fail">Добавить нового персонажа не удалось!</string>
    <string name="my_character_deleted">Персонаж успешно удален!</string>
    <string name="my_characters_empty">Список ваших персонажей пуст!</string>
    <string name="my_characters_updated">Информация о персонаже обновлена!</string>
    <string name="update_my_character">Обновить информацию</string>
    <string name="update_my_character_fail">Не удалось обновить информацио о персонаже!</string>
    <string name="add_many_characters">Добавить несколько персонажей</string>
    <string name="my_character_delete_fail">Удалить персонажа не удалось!</string>
    <string name="required_name">Введите имя</string>
    <string name="required_superpower">Опишите супер силу</string>
    <string name="add_picture">Добавить фото</string>
    <string name="galery_permission_denied">Не могу получить доступ к галереи!</string>
    <string name="camera_permission_denied">Не могу получить доступ к камере!</string>
    <string name="make_picture">Сделать фото</string>
    <string name="pick_my_character_picture">Выберите фото персонажа!</string>
    <string name="pick_update_picture">выбрать фото</string>
    <string name="make_update_picture">Сделать фото</string>
    <string name="my_images">my_images</string>
    <string name="authority">file_provider_authority</string>
    <string name="superpower_hint">Умеет превращаться в молекулу</string>
    <string name="superpower_hint_on_focus">Супер сила персонажа</string>
    <string name="name_hint">Человек-молекула</string>
    <string name="name_hint_on_focus">Имя персонажа</string>
    <string name="my_character_list_empty">Список Ваших персонажей пуст!</string>
    <string name="add_my_character_title">Добавить</string>
    <string name="update_my_character_title">Обновить</string>
    <string name="share_my_character_title">Поделиться</string>
    <string name="sharing_process">Пожалуйста, подождите...</string>
    <string name="sharing_failed">Поделиться героем не удалось!</string>
    <string name="share_hero">Поделитесь героем Marvel!</string>
    <string name="clear_chache">Очистить кэш картинок</string>
    <string name="cache_size">Размер кэша картинок: %1$s</string>
    <string name="cache_clean_failed">При очистке кэша произошла ошибка!</string>
    <string name="cache_clean_success">Кэш картинок успешно очищен!</string>
    <string name="cache_cleaning">Очищаю кэш...</string>
    <string name="cache_calculating">Вычисляю размер кэша...</string>
    <string name="cache_calculating_fail">При подсчете размера кэша произошла ошибка!</string>
    <string name="sharing_success">Вы успешно поделились героем!</string>
    <string name="data_base_load_fail">При загрузке данных произошла ошибка!</string>
    <string name="share_vk_completed">Персонаж отправлен на вашу стену ВК!</string>
    <string name="vk_login_error">Не удалось авторизоваться!</string>
    <string name="undo">Отмена</string>
    <string name="restore_my_character_fail">Восстановить персонажа не удалось!</string>
    <string name="time">Время</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="network_error">Отсутствует подключение к сети!</string>
    <string name="switch_view">switch view</string>

    <string name="black">black</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="web_view">webView</string>
    <string name="rx_java">rxJava</string>
    <string name="rx_java_2">rxJava2</string>
    <string name="unsub">ОТПИСКА!</string>
    <string name="contacts">Contacts</string>
    <string name="read_contacts_permission_denied">Для чтения списка контактов необходимо разрешение!</string>
    <string name="read_contacts_error">При чтении списка контактов произошла ошибка!</string>
    <string name="reading_list_contacts">Чтение списка контактов</string>
    <string name="press_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="dialog_fragment">DialogFragment</string>
    <string name="edit">Редактировать</string>
    <string name="input_name">Введите имя</string>
    <string name="get_name">Получить имя</string>
    <string name="you_tube">youTube</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="widget">WIDGET</string>
    <string name="widget_button">кнопка виджета</string>
    <string name="button_1">Кнопка №1</string>
    <string name="button_2">Кнопка №2</string>
    <string name="toast">Toast</string>
    <string name="add_mycharacter">Add MyCharacter</string>
    <string name="click_me">click me!</string>
    <string name="title_activity_touch_event_test">TouchEventTestActivity</string>


</resources>
