<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="18dp"
    tools:context="com.example.citilin.testapp.ui.mychracters.addmycharacter.AddMyCharactersActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            >

            <ImageView
                android:id="@+id/imgUpdateMyCharacterPreView"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/pickUpdatePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_update_picture"
                    />

                <Button
                    android:id="@+id/makeUpdatePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/make_update_picture"
                    android:layout_marginBottom="18dp"
                    />

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUpdateMyCharacterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/etUpdateMyCharacterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilUpdateMyCharacterName"
                    android:hint="@string/hint_name"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUpdateMyCharacterSuperPower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/etUpdateMyCharacterSuperPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etUpdateMyCharacterName"
                    android:hint="@string/superpower_hint"
                    android:lines="3"
                    android:maxLines="5"
                    android:minLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
